--- a/style.css
+++ b/style.css
@@ -1,97 +1,90 @@
-
-    #h1{
-    background-color: coral; 
-    padding: 15px;
-}
 body{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+         font-family: "Poppins", serif;
+        font-weight: 100;
+        font-style: normal;      
 }
-#container{
+#title{
+    background-color: rgba(255, 80, 80, 0.859);
     padding: 2px;
+    padding-left: 2%;
+    border-radius: 15PX; 
 }
-#div2{
-    width: 20%;
+
+.samp{
+    width: 25%;
     background-color: black;
     color: white;
-    padding: 15px;
-    border-radius: 5%;
-    margin-top: 7%;
-    margin-left: 3%;
+    padding: 10px;
+    padding-left: 15px;
+    margin: 3%;
+    border-radius: 10px;
     display: inline-block;
+    vertical-align: top;
 }
-#btn1{
-    padding-top: 2.5px;
-    padding-left: 3%;
-    padding-right: 3%;
-    
-    border-radius: 20%;
-    background-color: coral;
-    
+
+
+#outdel{
+    background-color: rgb(255, 80, 80);
+    color: black;
+    padding: 3px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 10px;
+}
+#firstadd{
+    background-color: rgb(255, 80, 80) ;
+    padding: 20px;
+    padding-left: 25px;
+    padding-right: 27px;
+    border-radius: 100%;
+    font-size:xx-large;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
 }
 #overlay{
-    top:0%;
-    left: 0%;
     width: 100%;
     height: 100%;
     background-color: black;
     position: absolute;
-    opacity: 0.8;
+    top: 0%;
+    left: 0%;
     z-index: 1;
     display: none;
+    opacity: 0.8;
 }
 #popup{
-    width: 40%;
-    background-color:coral;
-    color: black;
-    padding: 40px;
-    border-radius: 5%;
-    margin-top: 7%;
-    margin-left: 3%;
-    z-index: 2;
-    margin:30px;
+    width: 18%;
     position: absolute;
+    z-index: 2;
     display: none;
-    top: 20%;
-    left: 20%;
-    font-size: 30px;
-}
-#btn2{
-    padding-top: 3px;
-    padding-left: 3%;
-    padding-right: 3%;
-    background-color: black;
-    color: white;
-}
-#btn3{
-    padding-top: 3px;
-    padding-left: 3%;
-    padding-right: 3%;
-    background-color: black;
-    color: white;
-}
-#addbtn{
-    background-color: coral;
-    color: black;
-    font-size: 40px;
-    border-radius: 100%;
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    padding:20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    z-index: -1;
+    background-color:rgb(255, 80, 80);
+    top: 35%;
+    left:35%;
+    padding-left: 5%;
+    padding-bottom: 3%;
+    border-radius: 10px;
+
 }
 #popup input{
-    border: none;
-    border-bottom: solid black;
+    padding: 3px;
+    margin: 3px;
     background: transparent;
-    font-size: 30px;
+    border: none;
+    border-bottom: solid;
 }
 #popup textarea{
-    margin-top: 20px;
-    border:none;
-    border: solid black;
     background: transparent;
-    font-size: 30px;
+    border: solid;
+    margin: 5px;
+}
+#popup input::placeholder{
+    color: black;
+}
+#popup textarea::placeholder{
+    color: black;
+}
+#popup button{
+    background-color: black;
+    color: white;
 }
